# Bifrost

./: LICENSE  ORIGINAL_REQUEST.md  PROJECT.md  README.md  index.html  package-lock.json  package.json
.agents/auditor_m3_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m3_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  proposed_backend_tests.rs
.agents/explorer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m3_1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m3_1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m3_1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  (+3 more)
companion-app/: patch_connection_service.py  patch_main_screen.py  settings.gradle.kts
src/: App.tsx  index.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/adb/: client.rs  device.rs  discovery.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/mirror/: control.rs  mod.rs  scrcpy.rs  screencast.rs  stream.rs
src-tauri/src/network/: connection.rs  mdns.rs  mod.rs  pairing.rs
src-tauri/src/sync/: clipboard.rs  mod.rs  notifications.rs  websocket.rs
src-tauri/src/transfer/: adb_transfer.rs  mod.rs  progress.rs  ws_transfer.rs
src-tauri/tests/: backend_tests.rs
(+89 files in other folders)
