[package]
name = "bifrost"
version = "0.1.0"
description = "Bifrost — Connect your Android phone to your Linux desktop"
authors = ["Bifrost Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "bifrost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.20.0"
qrcode = "0.14.1"
local-ip-address = "0.6.13"
base64 = "0.22.1"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
image = "0.25.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
hostname = "0.4.2"
adb_client = "3.2.2"
bytes = "1.12.0"
byteorder = "1.5.0"
arboard = "3.6.1"
enigo = "0.6.1"
xcap = "0.9.6"
tauri-plugin-drag = "2.1.1"
